# Guidedog

./: CMakeLists.txt  README.md  package.xml
config/: clifford_controller.yaml
launch (copy)/: cliff.launch.py  clifford_control.launch.py  gazebo.launch.py  gazeborviz.launch.py
urdf/: clifford_sim_1.urdf  model.config
worlds/: empty.world  model.config
